Making heatmaps for network cluster display.

--- a/figures/wgcna_vis.ipynb
+++ b/figures/wgcna_vis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "polar-harmony",
+   "id": "recorded-drawing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "advanced-profession",
+   "id": "impaired-calculation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "vanilla-lodging",
+   "id": "geographic-minutes",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,8 +45,13 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "handy-particular",
-   "metadata": {},
+   "id": "entire-sodium",
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -98,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "behavioral-aggregate",
+   "id": "dying-ensemble",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "unusual-sport",
+   "id": "dutch-angola",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "nasty-roman",
+   "id": "serial-perspective",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "similar-bench",
+   "id": "buried-castle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "historic-flight",
+   "id": "statutory-mapping",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "robust-bobby",
+   "id": "daily-latitude",
    "metadata": {},
    "outputs": [
     {
