--- a/meta_analysis/inter_cancer_overlap.ipynb
+++ b/meta_analysis/inter_cancer_overlap.ipynb
@@ -2,10 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "disciplinary-modeling",
+   "execution_count": 2,
+   "id": "caring-renewal",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "\n",
+      "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
+      "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
+      "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
+      "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
+      "\n",
+      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(tidyverse)\n",
     "\n",
@@ -15,8 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "dense-trouble",
+   "execution_count": 3,
+   "id": "requested-violence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,19 +45,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "quarterly-humanitarian",
+   "execution_count": 4,
+   "id": "downtown-blowing",
    "metadata": {},
    "outputs": [],
    "source": [
-    "hub_con_thresh <- 0.5\n",
-    "# hub_con_thresh <- 0.25"
+    "# hub_con_thresh <- 0.5\n",
+    "# hub_con_thresh <- 0.25\n",
+    "hub_con_thresh <- 0.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "unknown-visibility",
+   "execution_count": 5,
+   "id": "apparent-juice",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,8 +69,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "undefined-death",
+   "execution_count": 6,
+   "id": "stable-weekly",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,8 +87,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "accessory-palestine",
+   "execution_count": 7,
+   "id": "flexible-reproduction",
    "metadata": {},
    "outputs": [
     {
@@ -111,16 +130,16 @@
     {
      "data": {
       "text/html": [
-       "0"
+       "4"
       ],
       "text/latex": [
-       "0"
+       "4"
       ],
       "text/markdown": [
-       "0"
+       "4"
       ],
       "text/plain": [
-       "[1] 0"
+       "[1] 4"
       ]
      },
      "metadata": {},
@@ -139,8 +158,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "buried-found",
+   "execution_count": 8,
+   "id": "endless-accordance",
    "metadata": {},
    "outputs": [],
    "source": [
