--- a/meta_analysis/make_gene_lists.ipynb
+++ b/meta_analysis/make_gene_lists.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,21 +57,28 @@
     "pval_thresh <- 0.05\n",
     "perm_thresh <- 0\n",
     "vote_thresh <- 5\n",
+    "# hub_con_thresh <- 0.75\n",
     "# hub_con_thresh <- 0.5\n",
-    "hub_con_thresh <- 0.25"
+    "# hub_con_thresh <- 0.25\n",
+    "hub_con_thresh <- 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
-   "metadata": {},
+   "execution_count": 138,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  hugo_symbol = \u001b[31mcol_character()\u001b[39m,\n",
       "  entrez_gene_id = \u001b[32mcol_double()\u001b[39m\n",
@@ -79,7 +86,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  Division = \u001b[31mcol_character()\u001b[39m,\n",
       "  Category = \u001b[31mcol_character()\u001b[39m,\n",
@@ -112,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +127,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
       "  baseMean = \u001b[32mcol_double()\u001b[39m,\n",
@@ -134,7 +141,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
       "  mean_imp_0 = \u001b[32mcol_double()\u001b[39m,\n",
@@ -151,7 +158,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
       "  pval = \u001b[32mcol_double()\u001b[39m,\n",
@@ -161,7 +168,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  .default = col_double(),\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
@@ -171,7 +178,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  module = \u001b[31mcol_character()\u001b[39m,\n",
       "  figo_stage_1_cor = \u001b[32mcol_double()\u001b[39m,\n",
@@ -194,7 +201,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
       "  gene_pval = \u001b[32mcol_double()\u001b[39m,\n",
@@ -205,7 +212,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
       "  cor = \u001b[32mcol_double()\u001b[39m,\n",
@@ -217,7 +224,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
       "  MI_est_median = \u001b[32mcol_double()\u001b[39m\n",
@@ -225,7 +232,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
       "  MI_est_median = \u001b[32mcol_double()\u001b[39m\n",
@@ -259,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
